# video-agent

./: .gitignore  AGENT.md  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  SKILL.md  TODO.md  _analyze_timing.py  agent.md  cdp_capture_development_plan.md  cdp_screenshot_material_spec.md  cdp_web_recording_short_video_solution.md  chatgpt_temp.md  check_pages.py  main.py  material_driven_video_refactor_plan.md  material_pipeline_implementation_plan.md  openbridge_5_pages_ascii_spec.md  openbridge_desktop_client_design.md  pyproject.toml  split_pdf.py  test.txt  test2.txt  test3.txt  test4.txt  tmp_sfx_urls.txt
agent_test/: README.md  __init__.py  __main__.py  pipeline.py  planner.py  project.py  storyboard.py  subtitles.py  tts.py
agents/: openai.yaml
assets/: catalog.json  relationships.json
cdp-capture/: README.md  package-lock.json  package.json
cdp-poc/: README.md  login_profile.js  record_kehuanxiongmao.js
config/: ai.example.json  asset_preparation.json  assets.v4.json  capability_registry.v4.bootstrap.json  gpt_image.example.json  minimax.example.json  scene_effects.json  stage4_selection.v4.json
docs/: add_new_effect_checklist.md  agent-playbook.md  architecture.md  cover_generation_strategy.md  effect_planning_strategy.md  effects_pipeline.md  gpt_image_derived_assets_todo.md  jianying_production_backend_20260724.md  jianying_stage_a_capability_probe_20260723.md  jianying_stage_b_minimal_loop_20260723.md  material_semantics_and_workflow_scenes_todo.md  minimal-command-sop.md  pipeline_v2_refactor.md  script_timing_constraints.md  v4_implementation_progress.md  video_agent_gpt_chat_handoff_context_20260718.md  video_agent_jianying_skill_architecture_draft_20260723.md  video_agent_v3_ai_orchestration_design.md  video_agent_v3_ai_orchestration_design_v3_2.md  video_agent_v3_architecture_review_20260712.md  video_agent_v3_design.md  video_agent_v3_final_design.md  video_agent_v3_implementation.md  video_agent_v3_multitrack_delivery.md  video_agent_v4_architecture_framework_20260717.md  video_agent_v4_architecture_framework_rev3_20260717.md  video_agent_v4_multi_agent_orchestration_design_20260717.md  (+12 more)
examples/: input.example.json  (+5 more)
(+491 files in other folders)
