[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-agent-test"
version = "0.1.0"
description = "Minimal word-timed, CDP-recorded, Remotion-rendered video agent"
requires-python = ">=3.10,<3.13"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.12,<1"]

[project.scripts]
video-agent-test = "agent_test.pipeline:main"

[tool.setuptools.packages.find]
include = ["agent_test*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py310"
