[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-agent-test"
version = "0.2.0"
description = "Skill-oriented, word-timed website product video agent using CDP and Remotion"
requires-python = ">=3.10,<3.13"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.12,<1"]

[project.scripts]
video-agent-test = "agent_test.pipeline:main"

[tool.setuptools.packages.find]
include = ["agent_test*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py310"
